--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br" translate="no">
   <head>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>CNC</title>
+    <title>Users</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
